--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,21 @@
-Flask==0.12.1
-Flask-Bootstrap==3.3.7.1
-Flask-Login==0.4.0
-Flask-Script==2.0.5
+aniso8601==1.2.1
+cffi==1.10.0
+click==6.7
+cryptography==1.7.2
+enum34==1.1.6
+Flask==0.12.2
+Flask-RESTful==0.3.6
+idna==2.5
+ipaddress==1.0.18
+itsdangerous==0.24
 Jinja2==2.9.6
-Werkzeug==0.12.1
-WTForms==2.1
+MarkupSafe==1.0
+passlib==1.7.1
+pyasn1==0.2.3
+pycparser==2.18
+PyJWT==1.5.2
+python-dateutil==2.6.0
+pytz==2017.2
+six==1.10.0
+typing==3.5.3.0
+Werkzeug==0.12.2
