--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@ Flask-RESTful==0.3.6
 idna==2.5
 ipaddress==1.0.18
 itsdangerous==0.24
-Jinja2==2.9.6
+Jinja2>=2.10.1
 MarkupSafe==1.0
 passlib==1.7.1
 pyasn1==0.2.3
